# greeter

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  version.h
.github/workflows/: build-all.yaml  version_update.yaml
